at | minor fixes for activity printing & add download button translations

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -450,6 +450,7 @@
     "SignInButton": "Bereits registriert? Hier anmelden"
   },
   "SDK": {
+    "DownloadButton": "Überprüfung herunterladen",
     "CancelButton": "Abbrechen",
     "CloseButton": "de_Close",
     "CommunicationError": "de_There was a problem saving your data. Please check the form and your answers before submitting",
