--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -450,6 +450,7 @@
     "SignInButton": "Kayıt yaptınız mı? Burada Oturum Açın"
   },
   "SDK": {
+    "DownloadButton": "Gözden Geçirmeyi İndir",
     "CancelButton": "İptal",
     "CloseButton": "tr_Close",
     "CommunicationError": "tr_There was a problem saving your data. Please check the form and your answers before submitting",
