--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -450,6 +450,7 @@
     "SignInButton": "Déjà enregistré ? Connectez-vous ici"
   },
   "SDK": {
+    "DownloadButton": "Télécharger l’examen",
     "CancelButton": "Annuler",
     "CloseButton": "fr_Close",
     "CommunicationError": "fr_There was a problem saving your data. Please check the form and your answers before submitting",
