at | fix submit button translation key

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -504,7 +504,7 @@
     "SignAndAssent": "Firma e assenso",
     "SignAndConsent": "Firma e consenso",
     "StartOrResume": "Inizia/Riprendi",
-    "SubmitBUtton": "it_Submit",
+    "SubmitButton": "it_Submit",
     "SignInOut": {
       "SignOut": "Disconnetti"
     },
