--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -381,7 +381,8 @@
       "Title": "Пожалуйста, введите пароль",
       "Text": "Пожалуйста, введите свой пароль *",
       "InputPlaceholder": "Пароль",
-      "PasswordWrongError": "Неправильный пароль Пожалуйста, повторите попытку.",
+      "PasswordWrongError": "Неправильный пароль. Пожалуйста, повторите попытку.",
+      "OtherError": "Мы сожалеем, но произошла неизвестная ошибка. Пожалуйста, повторите попытку.",
       "PasswordRequiredError": "Требуется пароль"
     },
     "ErrorPage": {
