--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -642,6 +642,7 @@
             "Text": "Please enter your password *",
             "InputPlaceholder": "Password",
             "PasswordWrongError": "Incorrect password. Please try again.",
+            "OtherError": "We're sorry, but an error has occurred. Please try again.",
             "PasswordRequiredError": "Password is required"
         },
         "StayInformed": {
