at | redirect to join us with email is taken

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -448,7 +448,8 @@
     }
   },
   "JoinUs": {
-    "SignInButton": "Already registered? Sign In here"
+    "SignInButton": "Already registered? Sign In here",
+    "EmailTaken": "Email you've provided is already taken. Please try to sign up with a different one."
   },
   "SDK": {
     "DownloadButton": "Download Review",
