--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
@@ -13,6 +13,7 @@
     },
     "email": {
       "error": "ru_Email cannot be empty",
+      "emailTaken": "ru_Email has already been taken. Please choose another value.",
       "label": "Адрес электронной почты",
       "whoseEmail": "Чей адрес электронной почты мне нужно ввести?",
       "whoseEmailTooltip": "Если вы являетесь родителем/законным опекуном ребенка (детей) с A-T, используйте свой адрес электронной почты.  Мы будем использовать этот адрес для связи с вами по поводу лиц, которых вы зарегистрируете в Глобальной платформе данных о семьях с A-T."
