--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-hi.json
@@ -13,6 +13,7 @@
     },
     "email": {
       "error": "hi_Email cannot be empty",
+      "emailTaken": "hi_Email has already been taken. Please choose another value.",
       "label": "ईमेल पता",
       "whoseEmail": "मुझे किसका ईमेल दर्ज करना चाहिए?",
       "whoseEmailTooltip": "यदि आप ए-टी से पीड़ित बच्चे (बच्चों) के माता/पिता/कानूनी संरक्षक हैं तो कृपया अपने स्वयं के ईमेल पते का उपयोग करें।  हम ग्लोबल ए-टी फैमिली डेटा प्लेटफॉर्म में आपके द्वारा पंजीकृत किसी भी व्यक्ति के संबंध में आपसे पत्राचार करने के लिए इस पते का उपयोग करेंगे।"
