DDP-5475 testboston: update invite code error message

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -252,7 +252,9 @@
       "Placeholder": "أدخل رمز الدعوة",
       "Error": {
         "Part1": "الرمز الذي أدخلته غير نشط. يُرجى التحقق من الرمز الذي أدخلته والمحاولة مرة أخرى. يمكنك دائمًا الاتصال بفريق دراسة TestBoston للحصول على المساعدة:",
-        "Part2": "أو"
+        "Part2": "أو",
+        "Part3": "",
+        "Part4": ""
       }
     },
     "Zip": {
