--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -252,7 +252,9 @@
       "Placeholder": "Введите код приглашения",
       "Error": {
         "Part1": "Введенный вами код не работает. Пожалуйста, проверьте свой код и повторите попытку. Вы всегда можете обратиться за помощью к сотрудникам исследования TestBoston:",
-        "Part2": "или"
+        "Part2": "или",
+        "Part3": "",
+        "Part4": ""
       }
     },
     "Zip": {
