--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
@@ -252,7 +252,9 @@
       "Placeholder": "输入邀请代码",
       "Error": {
         "Part1": "您输入的代码无效。请检查您的代码，然后重试。您可以随时联系 TestBoston 研究人员以寻求帮助：",
-        "Part2": "或者"
+        "Part2": "或者",
+        "Part3": "",
+        "Part4": ""
       }
     },
     "Zip": {
